# shapelib

./: CMakeLists.txt  shape.vcproj  shape_vc10.vcxproj  shape_vc10.vcxproj.filters  usexp-shapelib-config.cmake
